force-app/main/default/objects/Design_Project__c/Design_Project__c.object-meta.xml
<CustomObject>
    <label>設計開発プロジェクト</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>プロジェクト番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>設計開発プロジェクト</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>