force-app/main/default/objects/Design_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>顧客</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>設計開発プロジェクト</relationshipLabel>
    <relationshipName>Design_Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>