force-app/main/default/objects/Design_Project__c/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <label>実績完了日</label>
    <type>Date</type>
</CustomField>