force-app/main/default/objects/Design_Project__c/fields/Base_BOM__c.field-meta.xml
<CustomField>
    <fullName>Base_BOM__c</fullName>
    <label>製造BOM（M-BOM）</label>
    <type>Lookup</type>
    <referenceTo>BOM_Header__c</referenceTo>
    <relationshipLabel>設計開発プロジェクト（ベース）</relationshipLabel>
    <relationshipName>Design_Projects_Base</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>