force-app/main/default/objects/Design_Project__c/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <label>ベース製品</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>設計開発プロジェクト（ベース）</relationshipLabel>
    <relationshipName>Design_Projects_Base</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>