force-app/main/default/objects/Design_Project__c/fields/BOM_Header__c.field-meta.xml
<CustomField>
    <fullName>BOM_Header__c</fullName>
    <label>設計BOM（E-BOM）</label>
    <type>Lookup</type>
    <referenceTo>BOM_Header__c</referenceTo>
    <relationshipLabel>設計開発プロジェクト</relationshipLabel>
    <relationshipName>Design_Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>