force-app/main/default/objects/Design_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>プロジェクト概要</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>