force-app/main/default/objects/Design_Project__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <label>製品施策</label>
    <type>Lookup</type>
    <referenceTo>Product_Initiative__c</referenceTo>
    <relationshipLabel>設計開発プロジェクト</relationshipLabel>
    <relationshipName>Design_Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>