force-app/main/default/objects/Design_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>関連商談</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>設計開発プロジェクト</relationshipLabel>
    <relationshipName>Design_Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>