force-app/main/default/objects/Design_Project__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <label>計画開始日</label>
    <type>Date</type>
</CustomField>