force-app/main/default/objects/Design_Project__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>新製品</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>設計開発プロジェクト</relationshipLabel>
    <relationshipName>Design_Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>