force-app/main/default/objects/Design_Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>プロジェクトマネージャー</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>設計開発プロジェクト（PM）</relationshipLabel>
    <relationshipName>Design_Projects_PM</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>