force-app/main/default/objects/Design_Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>プロジェクト名</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>