force-app/main/default/objects/Design_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企画中</fullName>
                <default>true</default>
                <label>企画中</label>
            </value>
            <value>
                <fullName>進行中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>中止</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>